tests/baselines/reference/typeName1.errors.txt
tests/cases/compiler/typeName1.ts(9,5): error TS2322: Type 'number' is not assignable to type '{ f(s: string): number; f(n: number): string; }'.
  Property 'f' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(10,5): error TS2322: Type 'number' is not assignable to type '{ f(s: string): number; }'.
  Property 'f' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(11,5): error TS2322: Type 'number' is not assignable to type '{ (s: string): number; (n: number): string; }'.
tests/cases/compiler/typeName1.ts(12,5): error TS2322: Type 'number' is not assignable to type '{ x: any; y: any; z: number; f(n: number): string; f(s: string): number; }'.
  Property 'x' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(13,5): error TS2322: Type 'number' is not assignable to type '{ (s: string): number; (n: number): string; x: any; y: any; z: number; f(n: number): string; f(s: string): number; }'.
  Property 'x' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(14,5): error TS2322: Type 'number' is not assignable to type '{ z: number; f: { (n: number): string; (s: string): number; }; }'.
  Property 'z' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(15,5): error TS2322: Type 'number' is not assignable to type '(s: string) => boolean'.
tests/cases/compiler/typeName1.ts(16,5): error TS2322: Type 'number' is not assignable to type '{ (): boolean; [s: string]: { x: any; y: any; }; [n: number]: { x: any; y: any; }; z: I; }'.
  Property 'z' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(16,10): error TS2411: Property 'z' of type 'I' is not assignable to string index type '{ x: any; y: any; }'.
tests/cases/compiler/typeName1.ts(17,5): error TS2322: Type 'number' is not assignable to type 'I'.
  Property 'k' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(18,5): error TS2322: Type 'number' is not assignable to type 'I[][][][]'.
  Property 'length' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(19,5): error TS2322: Type 'number' is not assignable to type '{ z: I; x: boolean; }[][]'.
  Property 'length' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(20,5): error TS2322: Type 'number' is not assignable to type '{ z: I; x: boolean; y: (s: string) => boolean; w: { (): boolean; [s: string]: { x: any; y: any; }; [n: number]: { x: any; y: any; }; z: I; }; }[][]'.
  Property 'length' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(20,50): error TS2411: Property 'z' of type 'I' is not assignable to string index type '{ x: any; y: any; }'.
tests/cases/compiler/typeName1.ts(21,5): error TS2322: Type 'number' is not assignable to type '{ (): {}; new (): number; new (n: number): number; x: string; w: { y: number; }; }'.
  Property 'x' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(22,5): error TS2322: Type 'number' is not assignable to type '{ (): string; f(x: number): boolean; p: any; q: any; }'.
  Property 'f' is missing in type 'Number'.
tests/cases/compiler/typeName1.ts(23,5): error TS2322: Type 'typeof C' is not assignable to type 'number'.


==== tests/cases/compiler/typeName1.ts (17 errors) ====
    interface I {
        k;
    }
    class C {
        public eek:string;
        static zeek:number;
    }
    
    var x1:{ f(s:string):number;f(n:number):string; }=3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ f(s: string): number; f(n: number): string; }'.
!!! error TS2322:   Property 'f' is missing in type 'Number'.
    var x2:{ f(s:string):number; } =3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ f(s: string): number; }'.
!!! error TS2322:   Property 'f' is missing in type 'Number'.
    var x3:{ (s:string):number;(n:number):string; }=3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ (s: string): number; (n: number): string; }'.
    var x4:{ x;y;z:number;f(n:number):string;f(s:string):number; }=3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ x: any; y: any; z: number; f(n: number): string; f(s: string): number; }'.
!!! error TS2322:   Property 'x' is missing in type 'Number'.
    var x5:{ (s:string):number;(n:number):string;x;y;z:number;f(n:number):string;f(s:string):number; }=3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ (s: string): number; (n: number): string; x: any; y: any; z: number; f(n: number): string; f(s: string): number; }'.
!!! error TS2322:   Property 'x' is missing in type 'Number'.
    var x6:{ z:number;f:{(n:number):string;(s:string):number;}; }=3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ z: number; f: { (n: number): string; (s: string): number; }; }'.
!!! error TS2322:   Property 'z' is missing in type 'Number'.
    var x7:(s:string)=>boolean=3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '(s: string) => boolean'.
    var x8:{ z:I;[s:string]:{ x; y; };[n:number]:{x; y;};():boolean; }=3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ (): boolean; [s: string]: { x: any; y: any; }; [n: number]: { x: any; y: any; }; z: I; }'.
!!! error TS2322:   Property 'z' is missing in type 'Number'.
             ~~~~
!!! error TS2411: Property 'z' of type 'I' is not assignable to string index type '{ x: any; y: any; }'.
    var x9:I=3;
        ~~
!!! error TS2322: Type 'number' is not assignable to type 'I'.
!!! error TS2322:   Property 'k' is missing in type 'Number'.
    var x10:I[][][][]=3;
        ~~~
!!! error TS2322: Type 'number' is not assignable to type 'I[][][][]'.
!!! error TS2322:   Property 'length' is missing in type 'Number'.
    var x11:{z:I;x:boolean;}[][]=3;
        ~~~
!!! error TS2322: Type 'number' is not assignable to type '{ z: I; x: boolean; }[][]'.
!!! error TS2322:   Property 'length' is missing in type 'Number'.
    var x12:{z:I;x:boolean;y:(s:string)=>boolean;w:{ z:I;[s:string]:{ x; y; };[n:number]:{x; y;};():boolean; };}[][]=3;
        ~~~
!!! error TS2322: Type 'number' is not assignable to type '{ z: I; x: boolean; y: (s: string) => boolean; w: { (): boolean; [s: string]: { x: any; y: any; }; [n: number]: { x: any; y: any; }; z: I; }; }[][]'.
!!! error TS2322:   Property 'length' is missing in type 'Number'.
                                                     ~~~~
!!! error TS2411: Property 'z' of type 'I' is not assignable to string index type '{ x: any; y: any; }'.
    var x13:{ new(): number; new(n:number):number; x: string; w: {y: number;}; (): {}; } = 3;
        ~~~
!!! error TS2322: Type 'number' is not assignable to type '{ (): {}; new (): number; new (n: number): number; x: string; w: { y: number; }; }'.
!!! error TS2322:   Property 'x' is missing in type 'Number'.
    var x14:{ f(x:number):boolean; p; q; ():string; }=3;
        ~~~
!!! error TS2322: Type 'number' is not assignable to type '{ (): string; f(x: number): boolean; p: any; q: any; }'.
!!! error TS2322:   Property 'f' is missing in type 'Number'.
    var x15:number=C;
        ~~~
!!! error TS2322: Type 'typeof C' is not assignable to type 'number'.
    
    
    
    